--- a/app/views/consulta/show.html.erb
+++ b/app/views/consulta/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+<strong>CONSULTA </strong>
+  <strong><%= @consultum.id %></strong>
+</p>
+
+<p>
   <strong>Data:</strong>
   <%= @consultum.date %>
 </p>
