Adicionando página inicial ao consulta-sim

--- a/app/views/enderecos/_endereco.html.erb
+++ b/app/views/enderecos/_endereco.html.erb
@@ -10,7 +10,7 @@
   </p>
 
   <p>
-    <strong>Street avenue:</strong>
+    <strong>Street/Avenue:</strong>
     <%= endereco.street_avenue %>
   </p>
 
