corringindo erro no destroy

--- a/app/views/consulta/show.html.erb
+++ b/app/views/consulta/show.html.erb
@@ -37,3 +37,4 @@
 
 <%= link_to 'Edit', edit_consultum_path(@consultum) %> |
 <%= link_to 'Back', consulta_path %>
+<%= button_to "Destroy this consultum", @consultum, method: :delete %>
