--- a/app/views/consulta/new.html.erb
+++ b/app/views/consulta/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New consultum</h1>
+<h1 style="display: flex; justify-content: center">New consultum</h1>
 
 <%= render "form", consultum: @consultum %>
 
