--- a/app/views/medicos/new.html.erb
+++ b/app/views/medicos/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New medico</h1>
+
+<h1 style="display: flex; justify-content: center">New medico</h1>
 
 <%= render "form", medico: @medico %>
 
