--- a/app/views/pacientes/new.html.erb
+++ b/app/views/pacientes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New paciente</h1>
+<h1 style="display: flex; justify-content: center">New paciente</h1>
 
 <%= render "form", paciente: @paciente %>
 
